# opentensorvis

./: .gitmodules  README.md
inviwo/opentensorvis/: readme.md
inviwo/opentensorvis/contourexplorer/: CMakeLists.txt  depends.cmake  readme.md
inviwo/opentensorvis/contourtree/: CMakeLists.txt  depends.cmake
inviwo/opentensorvis/contourtree/include/inviwo/contourtree/: contourtreemodule.h
inviwo/opentensorvis/contourtree/include/inviwo/contourtree/datavisualizer/: contourtreecomputationvisualizer.h
inviwo/opentensorvis/contourtree/include/inviwo/contourtree/ports/: contourtreedataport.h  contourtreeport.h  contourtreesimplificationport.h  contourtreetopologicalfeaturesport.h  extremalpointsport.h
inviwo/opentensorvis/contourtree/include/inviwo/contourtree/processors/: contourtree.h  contourtreecomputationprocessor.h  contourtreedataprocessor.h  contourtreeprocessor.h  contourtreequerycriticalpointsprocessor.h  contourtreequeryprocessor.h  contourtreequerysubtrees.h  contourtreequerytopoangler.h  contourtreesimplificationprocessor.h  contourtreetopologicalfeaturesprocessor.h  persistenceprocessor.h  persistencesimplificationprocessor.h  volumelabelselectionprocessor.h
inviwo/opentensorvis/contourtree/include/inviwo/contourtree/util/: util.h
inviwo/opentensorvis/contourtree/src/: contourtreemodule.cpp
inviwo/opentensorvis/contourtree/src/datavisualizer/: contourtreecomputationvisualizer.cpp
inviwo/opentensorvis/contourtree/src/processors/: contourtree.cpp  contourtreecomputationprocessor.cpp  contourtreedataprocessor.cpp  contourtreeprocessor.cpp  contourtreequerycriticalpointsprocessor.cpp  contourtreequeryprocessor.cpp  contourtreequerysubtrees.cpp  contourtreequerytopoangler.cpp  contourtreesimplificationprocessor.cpp  contourtreetopologicalfeaturesprocessor.cpp  persistenceprocessor.cpp  persistencesimplificationprocessor.cpp  volumelabelselectionprocessor.cpp
inviwo/opentensorvis/featurelevelsetsgl/: CMakeLists.txt  (+1 more)
inviwo/opentensorvis/opentensorvisbase/: CMakeLists.txt  depends.cmake
inviwo/opentensorvis/opentensorvisbase/data/tensorfields/: two_point_load.tfb
inviwo/opentensorvis/opentensorvisbase/data/workspaces/: hyperstreamlines.inv  tensor_glyphs.inv  tensor_lic.inv
inviwo/opentensorvis/opentensorvisbase/include/inviwo/opentensorvisbase/: opentensorvisbasemodule.h  opentensorvisbasemoduledefine.h
inviwo/opentensorvis/opentensorvisbase/include/inviwo/opentensorvisbase/algorithm/: tensorfieldsampling.h
inviwo/opentensorvis/opentensorvisbase/include/inviwo/opentensorvisbase/datastructures/: attributes.h  deformablecube.h  deformablecylinder.h  hyperstreamlinetracer.h  tensorfield.h  tensorfield2d.h  tensorfield3d.h
inviwo/opentensorvis/opentensorvisbase/include/inviwo/opentensorvisbase/datavisualizer/: anisotropyraycastingvisualizer.h  hyperlicvisualizer2d.h
inviwo/opentensorvis/opentensorvisbase/include/inviwo/opentensorvisbase/processors/: tensorfield2dasrgba.h  tensorfield2dlic.h  tensorfield2dmetadata.h  tensorfield2dsubset.h  tensorfield2dtoimage.h  tensorfield3dboundingbox.h  tensorfield3dfiberangle.h  tensorfield3dinformation.h  tensorfield3dmasktovolume.h  tensorfield3dmetadata.h  tensorfield3dslice.h  tensorfield3dsubset.h  tensorglyphrenderer.h
inviwo/opentensorvis/opentensorvisbase/include/inviwo/opentensorvisbase/properties/: eigenvalueproperty.h
inviwo/opentensorvis/opentensorvisbase/include/inviwo/opentensorvisbase/util/: attributeutil.h  distancemetrics.h  misc.h  ndim.h  setoperations.h  tensorfieldutil.h  tensorutil.h
inviwo/opentensorvis/opentensorvisbase/include/inviwo/tensorvisbase/datastructures/: hyperstreamlinetracer.h
inviwo/opentensorvis/opentensorvisbase/include/inviwo/tensorvisbase/datavisualizer/: hyperlicvisualizer3d.h
inviwo/opentensorvis/opentensorvisbase/include/inviwo/tensorvisbase/ports/: tensorfieldport.h
inviwo/opentensorvis/opentensorvisbase/include/inviwo/tensorvisbase/processors/: hyperstreamlines.h  imagetospherefield.h  tensorfield3dbasismanipulation.h  tensorfield3dboundingbox.h  tensorfield3dsubsample.h  tensorinformation.h
inviwo/opentensorvis/opentensorvisbase/include/inviwo/tensorvisbase/properties/: eigenvalueproperty.h
inviwo/opentensorvis/opentensorvisbase/include/inviwo/tensorvisbase/util/: misc.h
inviwo/opentensorvis/opentensorvisbase/src/: opentensorvisbasemodule.cpp
inviwo/opentensorvis/opentensorvisbase/src/algorithm/: tensorfieldsampling.cpp
inviwo/opentensorvis/opentensorvisbase/src/datastructures/: deformablecylinder.cpp  deformablesphere.cpp  hyperstreamlinetracer.cpp  tensorfield3d.cpp
inviwo/opentensorvis/opentensorvisbase/src/processors/: eigenvaluefieldtoimage.cpp  tensorfield2dasrgba.cpp  tensorfield2dlic.cpp  tensorfield2dmetadata.cpp  tensorfield2dsubset.cpp  tensorfield2dtoimage.cpp  tensorfield3dboundingbox.cpp  tensorfield3dfiberangle.cpp  tensorfield3dmasktovolume.cpp  tensorfield3dslice.cpp  tensorfield3dsubsample.cpp  tensorfield3dsubset.cpp  tensorfield3dtovolume.cpp  tensorglyphprocessor.cpp  tensorglyphrenderer.cpp
inviwo/opentensorvis/opentensorvisbase/src/properties/: tensorglyphproperty.cpp
inviwo/opentensorvis/opentensorvisbase/src/util/: tensorfieldutil.cpp  tensorutil.cpp
inviwo/opentensorvis/opentensorvisbase/tests/unittests/: arithmic-operations.cpp  de_normalization.cpp  distance-measures.cpp  opentensorvisbase-unittest-main.cpp  set-operations.cpp  tensorvisbase-unittest-main.cpp  to-string.cpp
inviwo/opentensorvis/opentensorvisttk/: CMakeLists.txt  depends.cmake  readme.md
inviwo/opentensorvis/opentensorvisttk/include/inviwo/opentensorvisttk/: opentensorvisttkmodule.h  opentensorvisttkmoduledefine.h
inviwo/opentensorvis/opentensorvisttk/include/inviwo/opentensorvisttk/processors/: opentensorvisttktestprocessor.h
inviwo/opentensorvis/opentensorvisttk/src/: opentensorvisttkmodule.cpp
inviwo/opentensorvis/opentensorvisttk/src/processors/: opentensorvisttktestprocessor.cpp
misc/vtk/: CMakeLists.txt
paraview/: CMakeLists.txt
paraview/Plugin/: CMakeLists.txt  paraview.plugin
tensorvis/tensorvisio/: CMakeLists.txt
(+271 files in other folders)
